<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="100dp"
              android:padding="5dp"
              android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:text="1"
            android:textAllCaps="true"
            android:textSize="30dp"
            android:scaleType="fitCenter"/>

</LinearLayout>
